[gd_scene load_steps=48 format=2]

[ext_resource path="res://Boss.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemy/boss/Robot 1/robotBase.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemy/boss/Robot 1/robot1_reload.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemy/boss/Robot 1/robot1_machine.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemy/boss/weapon_gun.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemy/boss/Robot 1/robot1_two_gun.png.png" type="Texture" id=6]
[ext_resource path="res://assets/Music/468008__robinhood76__07489-mutant-pain-scream.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/Music/238756__robinhood76__05030-scary-monster-cat-whirrs.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/Music/Hit_Hurt10.wav" type="AudioStream" id=9]

[sub_resource type="CapsuleShape2D" id=1]
radius = 16.847
height = 11.0029

[sub_resource type="CircleShape2D" id=2]
radius = 400.0

[sub_resource type="CircleShape2D" id=3]
radius = 200.0

[sub_resource type="Animation" id=4]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("deathAudio:playing")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_kill"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "helicopter"
length = 1.8
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("RobotOneWeapon:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RobotTwoWeapon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ), Vector2( 0, 1 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 0.945098, 1, 0, 0.45098 ), Color( 0, 0.0862745, 1, 1 ), Color( 0.219608, 1, 0, 0.462745 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=46]
resource_name = "take_damage_base"
length = 0.6

[sub_resource type="Animation" id=8]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("RobotBase:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "helicopter"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "idle"

[sub_resource type="AnimationNodeAdd2" id=16]

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "take_damage"

[sub_resource type="AnimationNodeBlendTree" id=19]
"nodes/Add2 2/node" = SubResource( 16 )
"nodes/Add2 2/position" = Vector2( 560, 0 )
nodes/Animation/node = SubResource( 18 )
nodes/Animation/position = Vector2( 360, 20 )
"nodes/Animation 2/node" = SubResource( 17 )
"nodes/Animation 2/position" = Vector2( 360, 140 )
nodes/output/position = Vector2( 760, 20 )
node_connections = [ "output", 0, "Add2 2", "Add2 2", 0, "Animation", "Add2 2", 1, "Animation 2" ]

[sub_resource type="AnimationNodeAdd2" id=20]

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "take_damage"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "walk"

[sub_resource type="AnimationNodeBlendTree" id=23]
graph_offset = Vector2( -84.1667, 21.5492 )
nodes/Add2/node = SubResource( 20 )
nodes/Add2/position = Vector2( 620, 40 )
nodes/Animation/node = SubResource( 22 )
nodes/Animation/position = Vector2( 380, 0 )
"nodes/Animation 2/node" = SubResource( 21 )
"nodes/Animation 2/position" = Vector2( 380, 120 )
nodes/output/position = Vector2( 840, 40 )
node_connections = [ "output", 0, "Add2", "Add2", 0, "Animation 2", "Add2", 1, "Animation" ]

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachine" id=44]
states/death/node = SubResource( 9 )
states/death/position = Vector2( 735.847, 148.725 )
states/helicopter/node = SubResource( 10 )
states/helicopter/position = Vector2( 350, 313 )
states/idle/node = SubResource( 15 )
states/idle/position = Vector2( 588.847, -20.6535 )
states/take_damage/node = SubResource( 19 )
states/take_damage/position = Vector2( 855.635, -4.93599 )
states/take_damage_walk/node = SubResource( 23 )
states/take_damage_walk/position = Vector2( 134, 125 )
states/walk/node = SubResource( 24 )
states/walk/position = Vector2( 350, -39 )
transitions = [ "walk", "take_damage_walk", SubResource( 25 ), "take_damage_walk", "walk", SubResource( 26 ), "take_damage_walk", "helicopter", SubResource( 27 ), "helicopter", "walk", SubResource( 28 ), "walk", "helicopter", SubResource( 29 ), "idle", "walk", SubResource( 33 ), "walk", "idle", SubResource( 34 ), "take_damage_walk", "idle", SubResource( 35 ), "walk", "death", SubResource( 36 ), "idle", "death", SubResource( 37 ), "helicopter", "death", SubResource( 39 ), "take_damage_walk", "death", SubResource( 40 ), "idle", "take_damage", SubResource( 41 ), "take_damage", "idle", SubResource( 42 ), "take_damage", "death", SubResource( 43 ) ]
graph_offset = Vector2( 118.331, 169.368 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=45]

[node name="Boss" type="KinematicBody2D"]
position = Vector2( 0.833327, 1 )
scale = Vector2( 3, 3 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="RayCast2D3" type="RayCast2D" parent="."]
position = Vector2( -2.4949, -9.91178 )
enabled = true
cast_to = Vector2( 18, 0 )
collision_mask = 2
collide_with_areas = true

[node name="RayCast2D2" type="RayCast2D" parent="."]
position = Vector2( -6.54724, 16.2999 )
enabled = true
cast_to = Vector2( 18, 0 )
collision_mask = 2
collide_with_areas = true

[node name="RobotBase" type="Sprite" parent="."]
position = Vector2( -0.847397, 1.03973 )
texture = ExtResource( 2 )
vframes = 2
hframes = 2

[node name="RobotDash" type="Sprite" parent="."]
visible = false
position = Vector2( -15.26, 1.04 )
texture = ExtResource( 3 )
offset = Vector2( 10, 0 )

[node name="RobotOneWeapon" type="Sprite" parent="."]
position = Vector2( -10.26, 1.04 )
z_index = 1
texture = ExtResource( 4 )
offset = Vector2( 10, 0 )

[node name="weapon_gun" type="Sprite" parent="RobotOneWeapon"]
position = Vector2( 28.7451, 8.85341 )
scale = Vector2( 0.39209, 0.660968 )
z_index = -1
texture = ExtResource( 5 )

[node name="RobotTwoWeapon" type="Sprite" parent="."]
visible = false
position = Vector2( -10.26, 1.04 )
z_index = 1
texture = ExtResource( 6 )
offset = Vector2( 10, 0 )

[node name="weapon_gun_up" type="Sprite" parent="RobotTwoWeapon"]
position = Vector2( 28.5352, -11.9507 )
scale = Vector2( 0.520943, 0.660968 )
z_index = -1
texture = ExtResource( 5 )

[node name="weapon_gun_up_direction" type="Sprite" parent="RobotTwoWeapon"]
visible = false
position = Vector2( 59.784, -11.951 )
scale = Vector2( 0.520943, 0.660968 )
z_index = -1
texture = ExtResource( 5 )

[node name="weapon_gun_down" type="Sprite" parent="RobotTwoWeapon"]
position = Vector2( 28.7201, 8.85341 )
scale = Vector2( 0.520943, 0.660968 )
z_index = -1
texture = ExtResource( 5 )

[node name="weapon_gun_down_direction" type="Sprite" parent="RobotTwoWeapon"]
visible = false
position = Vector2( 59.969, 8.853 )
scale = Vector2( 0.520943, 0.660968 )
z_index = -1
texture = ExtResource( 5 )

[node name="Body" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.20108, 1.82395 )
shape = SubResource( 1 )

[node name="Visibility" type="Area2D" parent="."]
visible = false
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Visibility"]
position = Vector2( 2.15845, 0 )
shape = SubResource( 2 )

[node name="Dash" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Dash"]
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/death = SubResource( 4 )
anims/helicopter = SubResource( 5 )
anims/idle = SubResource( 6 )
anims/take_damage = SubResource( 7 )
anims/take_damage_base = SubResource( 46 )
anims/walk = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 44 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 45 )
"parameters/take_damage/Add2 2/add_amount" = 0
parameters/take_damage_walk/Add2/add_amount = 0.5

[node name="DashDuration" type="Timer" parent="."]
one_shot = true

[node name="DashCD" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="deathAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="speak" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
autoplay = true
max_distance = 800.0

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ReloadHeli" type="Timer" parent="."]
wait_time = 20.0
[connection signal="body_entered" from="Visibility" to="." method="_on_Visibility_body_entered"]
[connection signal="body_exited" from="Visibility" to="." method="_on_Visibility_body_exited"]
[connection signal="body_entered" from="Dash" to="." method="_on_Dash_body_entered"]
[connection signal="body_exited" from="Dash" to="." method="_on_Dash_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
